@@ -4,11 +4,14 @@ import com.MHM.MultiHotelManagement.dto.mapper.ReviewMapperDTO;
 import com.MHM.MultiHotelManagement.dto.request.NotificationRequestDTO;
 import com.MHM.MultiHotelManagement.dto.request.ReviewRequestDTO;
 import com.MHM.MultiHotelManagement.dto.response.ReviewResponseDTO;
+import com.MHM.MultiHotelManagement.entity.Booking;
 import com.MHM.MultiHotelManagement.entity.Customer;
 import com.MHM.MultiHotelManagement.entity.Hotel;
 import com.MHM.MultiHotelManagement.entity.Review;
+import com.MHM.MultiHotelManagement.enums.BookingStatus;
 import com.MHM.MultiHotelManagement.enums.NotificationChannel;
 import com.MHM.MultiHotelManagement.enums.NotificationType;
+import com.MHM.MultiHotelManagement.repository.BookingRepository;
 import com.MHM.MultiHotelManagement.repository.CustomerRepository;
 import com.MHM.MultiHotelManagement.repository.HotelRepository;
 import com.MHM.MultiHotelManagement.repository.ReviewRepository;
@@ -18,7 +21,9 @@ import jakarta.persistence.EntityNotFoundException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ReviewServiceImpl implements ReviewService {
@@ -26,15 +31,18 @@ public class ReviewServiceImpl implements ReviewService {
     private final ReviewRepository reviewRepository;
     private final HotelRepository hotelRepository;
     private final CustomerRepository customerRepository;
+    private final BookingRepository bookingRepository;
     private final NotificationService notificationService;
 
     public ReviewServiceImpl(ReviewRepository reviewRepository,
                              HotelRepository hotelRepository,
                              CustomerRepository customerRepository,
+                             BookingRepository bookingRepository,
                              NotificationService notificationService) {
         this.reviewRepository = reviewRepository;
         this.hotelRepository = hotelRepository;
         this.customerRepository = customerRepository;
+        this.bookingRepository = bookingRepository;
         this.notificationService = notificationService;
     }
 
@@ -46,18 +54,46 @@ public class ReviewServiceImpl implements ReviewService {
         Customer customer = customerRepository.findById(dto.getCustomerId())
                 .orElseThrow(() -> new EntityNotFoundException("Customer not found"));
 
-        // Prevent duplicate review
-        if (reviewRepository.existsByCustomer_IdAndHotel_Id(dto.getCustomerId(), dto.getHotelId())) {
-            throw new IllegalStateException("Customer already reviewed this hotel");
+        if (dto.getBookingId() == null) {
+            throw new IllegalStateException("Booking ID is required to submit a review");
+        }
+
+        Booking booking = bookingRepository.findById(dto.getBookingId())
+                .orElseThrow(() -> new EntityNotFoundException("Booking not found"));
+
+        // Verify booking belongs to this customer
+        if (booking.getCustomer().getId() != dto.getCustomerId()) {
+            throw new IllegalStateException("This booking does not belong to you");
+        }
+
+        // Verify booking is for this hotel
+        if (booking.getHotel().getId() != dto.getHotelId()) {
+            throw new IllegalStateException("This booking is not for this hotel");
+        }
+
+        // Only completed bookings can be reviewed
+        BookingStatus bookingStatus = booking.getStatus();
+        if (bookingStatus != BookingStatus.CHECKED_OUT
+                && bookingStatus != BookingStatus.CONFIRMED
+                && bookingStatus != BookingStatus.NO_SHOW) {
+            throw new IllegalStateException(
+                    "You can only review after your stay is completed (current status: " + bookingStatus + ")");
+        }
+
+        // Prevent duplicate review per booking
+        if (reviewRepository.existsByCustomer_IdAndBooking_Id(dto.getCustomerId(), dto.getBookingId())) {
+            throw new IllegalStateException("You have already reviewed this booking");
         }
 
         Review review = ReviewMapperDTO.toEntity(dto);
         review.setHotel(hotel);
         review.setCustomer(customer);
+        review.setBooking(booking);
+        review.setStatus("APPROVED");
 
         Review saved = reviewRepository.save(review);
 
-        // Send review received notification to hotel owner
+        // Notify hotel owner
         try {
             NotificationRequestDTO ownerNotification = new NotificationRequestDTO();
             ownerNotification.setUserId(hotel.getOwner().getUser().getId());
@@ -79,6 +115,8 @@ public class ReviewServiceImpl implements ReviewService {
 
         review.setRating(dto.getRating());
         review.setComment(dto.getComment());
+        review.setEditCount(review.getEditCount() + 1);
+        review.setEditedAt(LocalDateTime.now());
 
         Review updated = reviewRepository.save(review);
         return ReviewMapperDTO.toResponseDTO(updated);
@@ -95,10 +133,19 @@ public class ReviewServiceImpl implements ReviewService {
     @Override
     @Transactional(readOnly = true)
     public List<ReviewResponseDTO> getReviewsByHotel(Long hotelId) {
-        return reviewRepository.findByHotelIdWithDetails(hotelId)
+        return reviewRepository.findByHotelIdWithDetailsOrderAll(hotelId)
                 .stream()
                 .map(ReviewMapperDTO::toResponseDTO)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<ReviewResponseDTO> getApprovedReviewsByHotel(Long hotelId) {
+        return reviewRepository.findByHotelIdWithDetails(hotelId, "APPROVED")
+                .stream()
+                .map(ReviewMapperDTO::toResponseDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -107,7 +154,45 @@ public class ReviewServiceImpl implements ReviewService {
         return reviewRepository.findByCustomerIdWithDetails(customerId)
                 .stream()
                 .map(ReviewMapperDTO::toResponseDTO)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<ReviewResponseDTO> getAllReviews() {
+        return reviewRepository.findAllWithDetails()
+                .stream()
+                .map(ReviewMapperDTO::toResponseDTO)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<ReviewResponseDTO> getReviewsByStatus(String status) {
+        return reviewRepository.findByStatusWithDetails(status)
+                .stream()
+                .map(ReviewMapperDTO::toResponseDTO)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    @Transactional
+    public ReviewResponseDTO approveReview(Long id) {
+        Review review = reviewRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Review not found"));
+        review.setStatus("APPROVED");
+        Review updated = reviewRepository.save(review);
+        return ReviewMapperDTO.toResponseDTO(updated);
+    }
+
+    @Override
+    @Transactional
+    public ReviewResponseDTO rejectReview(Long id) {
+        Review review = reviewRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Review not found"));
+        review.setStatus("REJECTED");
+        Review updated = reviewRepository.save(review);
+        return ReviewMapperDTO.toResponseDTO(updated);
     }
 
     @Override
@@ -117,5 +202,11 @@ public class ReviewServiceImpl implements ReviewService {
             throw new EntityNotFoundException("Review not found");
         }
         reviewRepository.deleteById(id);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public boolean hasCustomerReviewedBooking(Long customerId, Long bookingId) {
+        return reviewRepository.existsByCustomer_IdAndBooking_Id(customerId, bookingId);
     }
 }
